--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -27,11 +27,14 @@ SRCS
     "./displays/images/ui_font_DigitalNumbers16.c"
     "./displays/images/ui_font_OpenSansBold13.c"
     "./displays/images/ui_font_OpenSansBold14.c"
+    "./displays/images/ui_font_OpenSansBold24.c"
+    "./displays/images/ui_font_OpenSansBold45.c"
     "./displays/images/ui_img_initscreen2_png.c"
     "./displays/images/ui_img_miningscreen2_png.c"
     "./displays/images/ui_img_settingsscreen_png.c"
     "./displays/images/ui_img_splashscreen2_png.c"
     "./displays/images/ui_img_PortalScreen_png.c"
+    "./displays/images/ui_img_btcscreen_png.c"
 
 
 INCLUDE_DIRS
