--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -28,6 +28,7 @@ SRCS
     "./displays/displayDriver.c"
     "./displays/ui.c"
     "./displays/ui_helpers.c"
+    "./displays/APIs.c"
     "./displays/images/ui_font_DigitalNumbers16.c"
     "./displays/images/ui_font_DigitalNumbers28.c"
     "./displays/images/ui_font_DigitalNumbers16.c"
@@ -61,6 +62,7 @@ INCLUDE_DIRS
     "esp_app_format"
     "esp_event"
     "esp_http_server"
+    "esp_http_client"
     "esp_netif"
     "esp_timer"
     "esp_wifi"
