trying first flashing after screen updates

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM espressif/idf:release-v5.3
 
 # Install Node.js 20.x
 RUN apt-get update && \
-    apt-get install -y curl && \
+    apt-get install -y curl python3-pip && \
     curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
     apt-get install -y nodejs && \
     apt-get clean && \
@@ -16,6 +16,8 @@ RUN groupadd -g 1000 builder && \
 # Create /project directory and set permissions
 RUN mkdir /project && \
     chown builder:builder /project
+
+RUN pip3 install bitaxetool
 
 # Set working directory
 WORKDIR /project
