--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ SRCS
     "adc.c"
     "DS4432U.c"
     "EMC2101.c"
+    "EMC2302.c"
     "fonts.c"
     "i2c_master.c"
     "INA260.c"
@@ -41,7 +42,7 @@ SRCS
     "./displays/images/ui_img_miningscreen2_png.c"
     "./displays/images/ui_img_settingsscreen_png.c"
     "./displays/images/ui_img_splashscreen2_png.c"
-    "./displays/images/ui_img_PortalScreen_png.c"
+    "./displays/images/ui_img_portalscreen_png.c"
     "./displays/images/ui_img_btcscreen_png.c"
 
 
