--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
         "array": "c",
         "string": "c",
         "string_view": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "chrono": "c",
+        "condition_variable": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
