--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,12 @@ add_definitions(-DLV_LVGL_H_INCLUDE_SIMPLE)
 #add_definitions(-DDISPLAY_OLED)
 add_definitions(-DDISPLAY_TTGO)
 
+#enable memory tracker
+#add_definitions(-DDEBUG_MEMORY_LOGGING)
+
+# adds -I./main; needed for components to have
+# access to main include files
+include_directories("./main")
 
 # (Not part of the boilerplate)
 # This example uses an extra component for common functions such as Wi-Fi and Ethernet connection.
