influx initial commit, UI settings working, nothing else tested yet

--- a/config.cvs.example
+++ b/config.cvs.example
@@ -13,7 +13,15 @@ asicmodel,data,string,BM1368
 devicemodel,data,string,nerdqaxe_plus
 boardversion,data,string,500
 flipscreen,data,u16,1
-invertfanpol,data,u16,1
-autofanspeed,data,u16,1
+invertfanpol,data,u16,0
+autofanspeed,data,u16,0
 fanspeed,data,u16,100
 selftest,data,u16,0
+influx_enable,data,u16,0
+influx_url,data,string,http://192.168.0.123
+influx_port,data,u16,8086
+influx_token,data,string,token
+influx_bucket,data,string,nerdqaxeplus
+influx_org,data,string,nerdqaxeplus
+influx_prefix,data,string,mainnet_stats
+
