--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,75 +1,48 @@
-name: Build and Publish ESP32 Firmware
+name: Build and Release ESP32 Firmware
 
 on:
   workflow_dispatch:  # Manual trigger only
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Get Version Tag
+      id: version_tag
+      run: |
+        git fetch --tags  # Ensure all tags are fetched
 
+        version=$(git describe --tags --abbrev=0) || { echo "no tag found!"; exit 1; }
+        
+        echo "VERSION_TAG=${version}" >> $GITHUB_ENV
+        echo "VERSION_TAG=${version}"
+        
     - name: Compile Binaries
       run: |
         # Run the Docker container to build the project
-        docker run --rm -v $PWD:/home/builder/project \
-        espressif/idf:release-v5.3 build
+        docker run --rm --user root -v $PWD:/home/builder/project \
+        shufps/esp-idf-builder:0.0.1 idf.py build
 
     - name: Merge Binaries
       run: |
-        docker run --rm -v $PWD:/home/builder/project \
-        espressif/idf:release-v5.3 esptool.py --chip esp32s3 merge_bin --flash_mode dio --flash_size 16MB --flash_freq 80m \
+        docker run --rm --user root -v $PWD:/home/builder/project \
+        shufps/esp-idf-builder:0.0.1 esptool.py --chip esp32s3 merge_bin --flash_mode dio --flash_size 16MB --flash_freq 80m \
         0x0 build/bootloader/bootloader.bin \
         0x8000 build/partition_table/partition-table.bin \
         0x10000 build/esp-miner.bin \
         0x410000 build/www.bin \
         0xf10000 build/ota_data_initial.bin \
-        -o esp-miner-factory-nerdqaxe+.bin
+        -o esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload to Existing Release
+      uses: softprops/action-gh-release@v1
       with:
-        name: nerdqaxe-firmware
-        path: esp-miner-factory-nerdqaxe+.bin
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Download build artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: nerdqaxe-firmware
-
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: myorg/esp32-firmware
-        tags: |
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          type=match,pattern=v(\d+.\d+),suffix=-alpha,group=1,enable=${{ contains(github.ref, '-alpha') }}
-          type=match,pattern=v(\d+.\d+),suffix=-beta,group=1,enable=${{ contains(github.ref, '-beta') }}
-          type=match,pattern=v(\d+.\d+),suffix=-rc,group=1,enable=${{ contains(github.ref, '-rc') }}
-
-    - name: Create Release
-      uses: ncipollo/release-action@v1
-      with:
+        files: esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin, ./build/esp-miner.bin, ./build/www.bin
+        tag_name: ${{ env.VERSION_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
-        name: 'Firmware Release'
-        tag: ${{ steps.meta.outputs.version }}
-        files: esp-miner-factory-nerdqaxe+.bin
-        body: |
-          Automatically generated firmware release.
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
