--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,12 @@ jobs:
       run: |
         # Run the Docker container to build the project
         docker run --rm -v $PWD:/home/builder/project \
-        espressif/idf:release-v5.3 idf.py build
+        shufps/esp-idf-builder:0.0.1 idf.py build
 
     - name: Merge Binaries
       run: |
         docker run --rm -v $PWD:/home/builder/project \
-        espressif/idf:release-v5.3 esptool.py --chip esp32s3 merge_bin --flash_mode dio --flash_size 16MB --flash_freq 80m \
+        shufps/esp-idf-builder:0.0.1 esptool.py --chip esp32s3 merge_bin --flash_mode dio --flash_size 16MB --flash_freq 80m \
         0x0 build/bootloader/bootloader.bin \
         0x8000 build/partition_table/partition-table.bin \
         0x10000 build/esp-miner.bin \
