--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Compile Binaries
       run: |
         # Run the Docker container to build the project
-        cd ESP-Miner-NerdQAxePlus && \
+        cd /home/runner/work/ESP-Miner-NerdQAxePlus/ESP-Miner-NerdQAxePlus && \
         chown 1000:1000 . -R && \
         docker run --rm -v $PWD:/home/builder/project \
         shufps/esp-idf-builder:0.0.1 idf.py build
