--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,12 @@ jobs:
       run: |
         # Run the Docker container to build the project
         cd /home/runner/work/ESP-Miner-NerdQAxePlus/ESP-Miner-NerdQAxePlus && \
-        chown 1000:1000 . -R && \
-        docker run --rm -v $PWD:/home/builder/project \
+        docker run --rm --user root -v $PWD:/home/builder/project \
         shufps/esp-idf-builder:0.0.1 idf.py build
 
     - name: Merge Binaries
       run: |
-        docker run --rm -v $PWD:/home/builder/project \
+        docker run --rm --user root -v $PWD:/home/builder/project \
         shufps/esp-idf-builder:0.0.1 esptool.py --chip esp32s3 merge_bin --flash_mode dio --flash_size 16MB --flash_freq 80m \
         0x0 build/bootloader/bootloader.bin \
         0x8000 build/partition_table/partition-table.bin \
