--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,29 @@
-name: Build and Publish ESP32 Firmware
+name: Build and Release ESP32 Firmware
 
 on:
   workflow_dispatch:  # Manual trigger only
 
 jobs:
-  build:
+  build-release:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Get Version Tag
+      id: version_tag
+      run: |
+        git fetch --tags  # Ensure all tags are fetched
+
+        if git describe --tags --abbrev=0 >/dev/null 2>&1; then
+          version=$(git describe --tags --abbrev=0)
+        else
+          version="v0.0.0"
+        fi
+        echo "VERSION_TAG=${version}" >> $GITHUB_ENV
+        echo "VERSION_TAG=${version}"
+        
     - name: Compile Binaries
       run: |
         # Run the Docker container to build the project
@@ -27,61 +40,15 @@ jobs:
         0x10000 build/esp-miner.bin \
         0x410000 build/www.bin \
         0xf10000 build/ota_data_initial.bin \
-        -o esp-miner-factory-nerdqaxe+.bin
+        -o esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
 
-    - name: Generate Version Tag
-      id: version_tag
-      run: |
-        git fetch --tags  # Ensure all tags are fetched
-
-        if git describe --tags --abbrev=0 >/dev/null 2>&1; then
-          version=$(git describe --tags --abbrev=0)
-        else
-          version="v0.0.0"
-        fi
-        echo "VERSION_TAG=${version}" >> $GITHUB_ENV
-        echo "VERSION_TAG=${version}"
-
-    - name: Rename Binary with Version
-      run: |
-        mv esp-miner-factory-nerdqaxe+.bin esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
-
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: nerdqaxe-firmware
-        path: esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
-        
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Download build artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: nerdqaxe-firmware
-
-    - name: Generate Version Tag
-      id: version_tag
-      run: |
-        git fetch --tags  # Ensure all tags are fetched
-
-        if git describe --tags --abbrev=0 >/dev/null 2>&1; then
-          version=$(git describe --tags --abbrev=0)
-        else
-          version="v0.0.0"
-        fi
-        echo "VERSION_TAG=${version}" >> $GITHUB_ENV
-        echo "VERSION_TAG=${version}"
-        
     - name: Upload to Existing Release
       uses: softprops/action-gh-release@v1
       with:
-        files: esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
+        files: 
+          - esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
+          - ./build/esp-miner.bin
+          - ./build/www.bin
         tag_name: ${{ env.VERSION_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
       env:
