--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:  # Manual trigger only
 
 jobs:
-  build-release:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
@@ -45,10 +45,7 @@ jobs:
     - name: Upload to Existing Release
       uses: softprops/action-gh-release@v1
       with:
-        files: 
-          - esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin
-          - ./build/esp-miner.bin
-          - ./build/www.bin
+        files: esp-miner-factory-nerdqaxe-${{ env.VERSION_TAG }}.bin, ./build/esp-miner.bin, ./build/www.bin
         tag_name: ${{ env.VERSION_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
       env:
