--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         if git describe --tags --abbrev=0 >/dev/null 2>&1; then
           version=$(git describe --tags --abbrev=0)
         else
-          version="v0.0.0"
+          exit 1
         fi
         echo "VERSION_TAG=${version}" >> $GITHUB_ENV
         echo "VERSION_TAG=${version}"
