removed old midstate calculation, removed GLOBAL_STATE from bm1368.c

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "mutex": "c",
         "string.h": "c",
         "vcore.h": "c",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "functional": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
