reduced malloc and free where possible; nvs memory leak fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,10 @@
         "string.h": "c",
         "vcore.h": "c",
         "numeric": "cpp",
-        "functional": "c"
+        "functional": "c",
+        "vector": "c",
+        "memory": "c",
+        "system_error": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
