--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -19,6 +19,7 @@ SRCS
     "./tasks/asic_result_task.c"
     "./tasks/user_input_task.c"
     "./tasks/influx_task.c"
+    "./tasks/stats_task.c"
     "./tasks/power_management_task.c"
     "./http_server/http_server.c"
     "./self_test/self_test.c"
@@ -65,6 +66,7 @@ INCLUDE_DIRS
     "esp_timer"
     "esp_wifi"
     "esp_lcd"
+    "esp_psram"
     "json"
     "nvs_flash"
     "spiffs"
