/api/history/len and /api/history/data?start_timestamp=... endpoint seem to work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,7 +27,8 @@
         "vector": "c",
         "memory": "c",
         "system_error": "c",
-        "random": "c"
+        "random": "c",
+        "leak_tracker.h": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
