cleaned up a lot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,10 @@
         "memory": "c",
         "system_error": "c",
         "random": "c",
-        "leak_tracker.h": "c"
+        "leak_tracker.h": "c",
+        "history.h": "c",
+        "system.h": "c",
+        "influx_task.h": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
