allow changing frequency and core voltage without reset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,8 @@
         "leak_tracker.h": "c",
         "history.h": "c",
         "system.h": "c",
-        "influx_task.h": "c"
+        "influx_task.h": "c",
+        "cmath": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
