--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,32 +1,30 @@
 idf_component_register(
 SRCS
 
-    "i2c_master.c"
+    "i2c_master.cpp"
 
-    "main.c"
-    "nvs_config.c"
-    "system.c"
-    "boards/nerdqaxeplus.c"
-    "boards/drivers/EMC2302.c"
-    "boards/drivers/TMP1075.c"
-    "boards/drivers/TPS53647.c"
-    "leak_tracker.c"
-    "history.c"
+    "main.cpp"
+    "nvs_config.cpp"
+    "system.cpp"
+    "boards/board.cpp"
+    "boards/nerdqaxeplus.cpp"
+    "boards/drivers/EMC2302.cpp"
+    "boards/drivers/TMP1075.cpp"
+    "boards/drivers/TPS53647.cpp"
+    "history.cpp"
 
-    "./http_server/http_server.c"
-    "./self_test/self_test.c"
-    "./tasks/stratum_task.c"
-    "./tasks/create_jobs_task.c"
-    "./tasks/asic_result_task.c"
-    "./tasks/user_input_task.c"
-    "./tasks/influx_task.c"
-    "./tasks/power_management_task.c"
-    "./http_server/http_server.c"
-    "./self_test/self_test.c"
-    "./displays/displayDriver.c"
-    "./displays/ui.c"
-    "./displays/ui_helpers.c"
-    "./displays/APIs.c"
+    "./http_server/http_server.cpp"
+    "./self_test/self_test.cpp"
+    "./tasks/stratum_task.cpp"
+    "./tasks/create_jobs_task.cpp"
+    "./tasks/asic_result_task.cpp"
+    "./tasks/user_input_task.cpp"
+    "./tasks/influx_task.cpp"
+    "./tasks/power_management_task.cpp"
+    "./displays/displayDriver.cpp"
+    "./displays/ui.cpp"
+    "./displays/ui_helpers.cpp"
+    "./displays/APIs.cpp"
     "./displays/images/ui_font_DigitalNumbers16.c"
     "./displays/images/ui_font_DigitalNumbers28.c"
     "./displays/images/ui_font_DigitalNumbers16.c"
