--- a/components/bm1397/CMakeLists.txt
+++ b/components/bm1397/CMakeLists.txt
@@ -5,7 +5,8 @@ SRCS
     "bm1370.cpp"
     "serial.cpp"
     "crc.cpp"
-    "common.cpp"
+    "utils.cpp"
+    "mining.cpp"
 
 INCLUDE_DIRS
     "include"
