--- a/config.cvs.example
+++ b/config.cvs.example
@@ -21,7 +21,7 @@ overheat_temp,data,u16,70
 influx_enable,data,u16,0
 influx_url,data,string,http://192.168.0.123
 influx_port,data,u16,8086
-influx_token,data,string,token
+influx_token,data,string,f37fh783hf8hq
 influx_bucket,data,string,nerdqaxeplus
 influx_org,data,string,nerdqaxeplus
 influx_prefix,data,string,mainnet_stats
