initial untested nerdaxe support

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,12 +4,17 @@ SRCS
     "nvs_config.cpp"
     "system.cpp"
     "boards/board.cpp"
+    "boards/nerdaxe.cpp"
     "boards/nerdqaxeplus.cpp"
     "boards/nerdqaxeplus2.cpp"
     "boards/nerdoctaxeplus.cpp"
     "boards/drivers/EMC2302.cpp"
     "boards/drivers/TMP1075.cpp"
     "boards/drivers/TPS53647.cpp"
+    "boards/drivers/nerdaxe/DS4432U.cpp"
+    "boards/drivers/nerdaxe/INA260.cpp"
+    "boards/drivers/nerdaxe/EMC2101.cpp"
+    "boards/drivers/nerdaxe/adc.cpp"
     "boards/drivers/i2c_master.cpp"
     "history.cpp"
 
