--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,6 +8,7 @@ SRCS
     "boards/nerdqaxeplus.cpp"
     "boards/nerdqaxeplus2.cpp"
     "boards/nerdoctaxeplus.cpp"
+    "boards/nerdoctaxegamma.cpp"
     "boards/drivers/EMC2302.cpp"
     "boards/drivers/TMP1075.cpp"
     "boards/drivers/TPS53647.cpp"
